--- a/package.json
+++ b/package.json
@@ -11,13 +11,19 @@
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "bootstrap": "^5.1.3",
     "prop-types": "^15.8.1",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
+    "react-emojione": "^5.0.1",
+    "react-redux": "^5.0.6",
+    "react-router-dom": "^4.2.2",
+    "redux": "^4.1.2",
+    "redux-logger": "^3.0.6",
+    "redux-promise": "^0.6.0",
     "stimulus": "^3.0.1",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
   "devDependencies": {
-    "webpack-dev-server": "^4.8.0"
+    "webpack-dev-server": "~3"
   }
 }
